Bug 931378 Set input purpose to IM context r=karlt